@@ -13,6 +13,7 @@ Additions:
    * Add a search API to list all localisations corresponding to a name in map
    * Add elm_notify_align_set/get
    * Add virtualkeypad, clipboard state change signals from conformant.
+   * Add elm_toolbar_item_show/bring_in.
 
 Improvements:
 
